# bcp

./: .clang-format  .gitmodules  README.md  annotated.html  annotated_dup.js  classes.html  command__server_8h.html  command__server_8h.js  command__server_8h__incl.map  command__server_8h__incl.md5  command__server_8h_source.html  connected__udp__socket_8h.html  connected__udp__socket_8h.js  connected__udp__socket_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  examples.html  examples.js  files.html  globals.html  globals_func.html  graph_legend.html  gtest_2command_server_8cpp-example.html  gtest_2connected_udp_socket_8cpp-example.html  gtest_2request_sample_8cpp-example.html  gtest_2send_sample_8cpp-example.html  index.html  index.js  navtreedata.js  navtreeindex0.js  request__sample_8h.html  request__sample_8h.js  request__sample_8h__incl.map  request__sample_8h__incl.md5  request__sample_8h_source.html  send__sample_8h.html  send__sample_8h.js  send__sample_8h__incl.map  send__sample_8h__incl.md5  (+19 more)
Oph/: .gitignore  CMakeLists.txt  CMakePresets.json  HOUSEKEEPING_CLIENT_GUIDE.md  README.md  STARCAM_INTEGRATION.md  SYSTEM_MONITOR_CLIENT_GUIDE.md  accelerometer.c  accelerometer.h  astrometry.c  bcp-supervisor-oph.service  bcp_Oph  bcp_Oph.config  bvexcam.h  camera.c  camera.h  clear_output.sh  cli_Oph.c  cli_Oph.h  compile_code.sh  debug_star_camera.py  ec_motor.c  ec_motor.h  file_io_Oph.c  file_io_Oph.h  install_deps.sh  main_Oph.c  makeTable.txt  motor_control.h  run_accl.sh  star_camera_client.py  start.sh  start_pi_accelerometer.sh  sync_gps.sh  test.c  test_star_camera.py  vcpkg-configuration.json
Oph/bvexcam/: Display_image.ipynb  astrometry.cfg  latest_auto_focus_data.txt  static_hp_mask.txt
Oph/docs/: IMPLEMENTATION_PLAN.md  SMART_REPLACEMENT_DESIGN.md  STARCAM_DOWNLINK_PROTOCOL.md
Oph/include/: arduino.h  astrometry.h  bvexcam.h  cli_Oph.h  coords.h  ec_motor.h  file_io_Oph.h  gps_server.h  housekeeping.h  lazisusan.h  lens_adapter.h  lockpin.h  motor_control.h  pbob.h  server.h  starcam_downlink.h  system_monitor.h
Oph/installation/: install_libsofa.sh  install_pkgs.sh  install_soem.sh
Oph/src/: accelerometer.c  accl_rx.c  accl_tx.c  arduino.c  astrometry.c  bvexcam.c  camera.c  cli_Oph.c  coords.c  ec_motor.c  file_io_Oph.c  gps_server.c  housekeeping.c  housekeeping_testing.c  lazisusan.c  lens_adapter.c  lockpin.c  main_Oph.c  motor_control.c  pbob.c  server.c  starcam_downlink.c  system_monitor.c  system_monitor.sh
Sag/: .gitignore  BCP_CLIENT_GUIDE.md  CMakeLists.txt  HEATER_CLIENT_GUIDE.md  INTEGRATED_SYSTEM.md  Makefile.aquila  QUICK_START.md  README.md  aquila-system-monitor.service  bcp-supervisor-oph.service  bcp-supervisor.service  bcp_Sag  bcp_Sag.config  bcp_Sag.config.save  bcp_sag  bcp_spectrometer_client.py  bcp_supervisor.sh  bcp_supervisor_oph.sh  build_and_run.sh  cli_Oph.h  cli_Sag.c  cli_Sag.h  cli_ground.h  clock_setup.sh  comprehensive_tec_test  comprehensive_tec_test.c  data_analysis_bcp.py  debug_server_memory.c  debug_spectrum.py  debug_struct_sizes  debug_struct_sizes.c  file_io_Sag.c  file_io_Sag.h  find_tec_controller  find_tec_controller.c  get_heading.py  gps.c  gps.c.backup  gps.h  gps.h.backup  (+35 more)
Sag/PR59/: parameter.h  parameters.h  pbob.c  tec_config.ini  tec_control  tec_control_3  tec_control_3.c  tec_log_20250508_195009.txt  tec_log_20250714_122922.txt
Sag/Sag_heaters/: CMakeLists.txt  PBOB_INTEGRATION_SUMMARY.md  SPECTROMETER_SERVER_IMPLEMENTATION.md  UDPServer.c  bcp_Sag  bcp_Sag.config  build_compile.sh  cli_Sag.c  debug_server_memory  file_io_Sag.h  heaters.c  heaters.h  main_Sag.c  rfsoc-daemon.service  start.sh  ticc_client.c  vlbi-controller.service  vlbi_controller.py
Sag/TICC/: Analyze_TICC_data.ipynb  read_record_ticc.py  read_ticc.py
Sag/bvex_cmd/: bcp_ground.config  bcp_gs  cli_ground.c  cli_ground.h  main_ground.c
Sag/docs/: AQUILA_INTEGRATION.md  GPS_ERROR_REPORT.md  GPS_TELEMETRY_GUIDE.md  HEATER_CLIENT_GUIDE.md  PR59_FAN_STATUS_CLIENT_GUIDE.md  README.md  RFSoC_Installation_Instructions.md  SYSTEM_MONITOR_CLIENT_GUIDE.md  TELEMETRY_INTEGRATION_COMPLETE.md  TICC_CLIENT_GUIDE.md  VLBI_SETUP_NOTES.md  VLBI_Telemetry_Client_Guide.md  gyro_data_client_guide.md
Sag/heaters_data/: heaters_log_1752598935.txt  heaters_log_1752599823.txt  heaters_log_1752600169.txt  heaters_log_1752600198.txt  heaters_log_1752600989.txt  heaters_log_1752601535.txt  heaters_log_1752601607.txt  heaters_log_1752602876.txt  heaters_log_1752603714.txt
Sag/include/: cli_Sag.h  file_io_Sag.h  gps.h  heaters.h  pbob_client.h  position_sensors.h  position_sensors.h.backup  pr59_interface.h  rfsoc_client.h  spectrometer_server.h  system_monitor.h  telemetry_server.h  ticc_client.h  vlbi_client.h
Sag/sh_scripts/: build_and_run.sh  install_dependencies.sh  run_pos_sensor.sh  run_pos_sensors.sh  start_vlbi_logging.sh
Sag/src/: aquila_status.c  aquila_status.h  aquila_system_monitor.c  bvex@172.20.4.209:  cli_Sag.c  file_io_Sag.c  gps.c  heaters.c  main_Sag.c  pbob_client.c  pos_sensor_rx.c  pos_sensor_tx.c  position_sensors.c  pr59_client.py  pr59_interface.c  read_gps_from_Sag.py  read_latest_data_120khz.py  rfsoc4x2_tut_spec_20_120khz.py  rfsoc_client.c  rfsoc_spec_120khz.py  server_Oph.c  spectrometer_server.c  system_monitor.c  telemetry_server.c  test_120khz_client.py  ticc_client.c  vlbi_client.c  vlbi_controller.py  vlbi_data_logging_listener.py
bvex-link/bcp-fetch-client/: .clang-format  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  primitive.proto  request.proto  response.proto  sample.proto  test.sh  vcpkg-configuration.json  vcpkg.json  view-docs
bvex-link/codec/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  requirements.txt  test_c_lib.c  vcpkg.json
bvex-link/onboard-server/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build-debug.sh  compiler-flags  kill.sh  start.sh  (+4 more)
bvex-link/onboard-server-py/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
(+171 files in other folders)
