[project]
name = "bvex-codec"
version = "0.1.0"
description = "A Redis client for BCP"
authors = [
    { name = "Oliver", email = "oliver@example.com" },
]
dependencies = [
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bvex_codec*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
