[project]
name = "onboard-server"
version = "0.1.0"
description = "bcp onboard server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["onboard_server*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]